# data_adapter

./: .bumpversion.toml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  conftest.py  environment.yml  pyproject.toml
collections/hack-a-thon/: HARDCODED_ES_STRUCT.json
collections/modex_test_renewable/: HARDCODED_ES_STRUCT.json
data_adapter/: collection.py  core.py  databus.py  main.py  ontology.py  preprocessing.py  settings.py  structure.py  unit_conversion.py  units.py
scripts/: collect_energy_vectors.py  sedos_structure_parser.py
tests/: .env.test  sedos_set_io.xlsx  sedos_set_io_steel.xlsx  test_collection.py  test_commodity_interfaces.py  test_databus.py  test_ontology.py  test_preprocessing.py  test_scripts.py  test_structure.py  test_units.py  utils.py
tests/test_data/test_collection/: collection.json
tests/test_data/test_collection/modex/modex_capacity_factor/v2/: modex_capacity_factor.csv  modex_capacity_factor.json
tests/test_data/test_collection/modex/modex_constraint/v2/: modex_constraint.csv  modex_constraint.json
tests/test_data/test_collection/modex/modex_demand/v2/: modex_demand.csv  modex_demand.json
tests/test_data/test_collection/modex/modex_tech_generator_gas/v2/: modex_tech_generator_gas.csv  modex_tech_generator_gas.json
tests/test_data/test_collection/modex/modex_tech_storage_battery/v2/: modex_tech_storage_battery.csv  modex_tech_storage_battery.json
tests/test_data/test_collections/fk_multiple_versions/: collection.json
tests/test_data/test_collections/multiple_processes/: collection.json
tests/test_data/test_collections/multiple_processes/modex/modex_constraint/v2/: modex_constraint.csv  (+1 more)
tests/test_data/test_collections/process_type_none/: collection.json
tests/test_data/test_collections/refactor_timeseries/: collection.json
tests/test_data/test_collections/simple/: collection.json
tests/test_data/test_collections/subprocesses/: collection.json
tests/test_data/test_collections/test_bandwidth/: collection.json
tests/test_data/test_mimo/: input_output.csv  user_mimos.csv
tests/test_data/test_structures/: SEDOS_Modellstruktur.xlsx  SEDOS_Prozesse&Parameter.xlsx  SEDOS_es_structure.xlsx  emission_constraint_example.xlsx  hack-a-thon _by_subject.csv  hack-a-thon_by_file_name.csv  hack-a-thon_links_by_subject.csv  modex_example.csv  modex_example.json  modex_example.xlsx  multiple_versions.xlsx  processes.csv  subprocesses.csv  subprocesses_links.csv  user_mimos.csv
(+26 files in other folders)
